# codedoro

./: .gitignore  .jsbeautifyrc  README.md  gh-pages.js  index.html  jsconfig.json  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.cjs  postcss.config.js  pwa-assets.config.ts  svelte.config.js  svelte.config.ts  tailwind.config.ts  tsconfig.json  vite.config.js  vite.config.ts
.devcontainer/: Dockerfile  devcontainer.json
public/: index.html  manifest.json  service-worker.js
public/_app/: error.svelte-020ae69c.js  start-04219bb0.js
public/_app/chunks/: create-task-modal-566ade28.js  vendor-af7863c2.js
public/_app/pages/: __layout.svelte-9000ab2f.js  index.svelte-91b36c25.js  settings.svelte-40cab425.js  stats.svelte-209448f8.js  tasks.svelte-f8eb6ed7.js
public/settings/: index.html
public/stats/: index.html
public/tasks/: index.html
src/: App.svelte  app.css  app.html  main.ts  service-worker.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/components/: CustomSelect.svelte  MainScreen.svelte  SettingsScreen.svelte  StatsScreen.svelte  TasksList.svelte  confirm-exit-modal.svelte  create-task-modal.svelte  navbar.svelte  titlebar.svelte
src/lib/: pwa.ts
src/locales/: en.json  ru.json
src/routes/: __layout.svelte  index.svelte
src/stores/: modal.js  modal.svelte.ts  modal.ts  screen.js  screen.ts  task.js  task.ts  tasks.ts  theme.ts  timer.js  timer.ts
src/styles/: theme.css
src/utils/: formatTime.js  formatTime.ts
static/: manifest.json  manifest.webmanifest  robots.txt
(+1 files in other folders)
